--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -18,7 +18,7 @@
 		padding: 10% 0;
 	}
 	
-	.noradar
+	.card
 	{
 		display: none;
 		padding: 10% 0;
@@ -26,7 +26,7 @@
 		text-align: center;
 	}
 	
-	.noradarText
+	.cardText
 	{
 		display: inline-block;
 		margin: auto;
@@ -191,8 +191,12 @@
 	<img class="imginicio" src="../img/logo.png">
 </div>
 
-<div id="noradar" class="noradar">
-	<div id="noradarText" class="noradarText">Selecciona al menos 3 actividades para mostrar el gráfico</div>
+<div id="noradar" class="card">
+	<div id="noradarText" class="cardText">Selecciona al menos 3 actividades para mostrar el gráfico</div>
+</div>
+
+<div id="noGroup" class="card">
+	<div id="noGroupText" class="cardText">Selecciona un grupo para mostrar el gráfico</div>
 </div>
 
 <div id="chart-container" class="chart-container">
@@ -429,6 +433,8 @@ function drawTable() {
 	document.getElementById('btnBoxPlotGroup').disabled = false;
 	document.getElementById('btnCalificaciones').disabled = true;
 	document.getElementById('inicio').style.display = 'none';
+	document.getElementById('noradar').style.display = 'none';
+	document.getElementById('noGroup').style.display = 'none';
 	document.getElementById('chart-container').style.display = 'none';
 	document.getElementById('table_div').style.display = 'block';
 	document.getElementById('btnMean').style.display = 'none';
@@ -457,6 +463,7 @@ function generateChart(type){
 	document.getElementById('chart-container').style.display = 'block';
 	document.getElementById('inicio').style.display = 'none';
 	document.getElementById('noradar').style.display = 'none';
+	document.getElementById('noGroup').style.display = 'none';
 	document.getElementById('btnLegend').style.display = 'inline';
 	
 	switch (type) {
@@ -521,6 +528,10 @@ function generateChart(type){
 				data: BoxPlotGroupDataSet,
 				options: optionsLineChart
 			});
+			if(BoxPlotGroupDataSet == '') {
+				document.getElementById('chart-container').style.display = 'none';
+				document.getElementById('noGroup').style.display = 'block';
+			}
 			break;
 		case 'radar':
 			currentType = 'radar';
@@ -589,6 +600,12 @@ function updateChart(type, dataSet){
 				BoxPlotGroupDataSet = dataSet;
 				if(currentType == 'boxplotgroup'){
 					myChart.data = BoxPlotGroupDataSet;	
+				}
+				if(BoxPlotGroupDataSet == '') {
+					document.getElementById('chart-container').style.display = 'none';
+					document.getElementById('noGroup').style.display = 'block';
+				} else {
+					document.getElementById('noGroup').style.display = 'none';
 				}
 				break;
 			case 'radar':
@@ -775,6 +792,10 @@ var messages = {
 	noradarText: {
 		es_es: "Selecciona al menos 3 actividades para mostrar el gráfico",
 		en_en: "Select at least 3 activities to show the chart"
+	},
+	noGroupText: {
+		es_es: "Selecciona un grupo para mostrar el gráfico",
+		en_en: "Select a group to show the chart"
 	}
 }
 
@@ -789,6 +810,7 @@ function setLanguage(lang) {
 	get_i18n('btnMean', lang);
 	get_i18n('btnGroupMean', lang);
 	document.getElementById('noradarText').innerHTML = messages['noradarText'][lang];
+	document.getElementById('noGroupText').innerHTML = messages['noGroupText'][lang];
 	
 }
 
