--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -1,158 +1,8 @@
 <html>
 <meta charset="UTF-8"> 
 <head>
+<link rel ="stylesheet" type = "text/css" href = "../css/chart.css" />
 
-<style type="text/css">
-	body
-	{
-		background: #ffffff;
-		padding: 0px;
-		margin: 0px;
-	}
-	.imginicio
-	{
-		height: 350px;
-		width: 350px;
-		display: block;
-		margin: auto;
-		padding: 10% 0;
-	}
-	
-	.card
-	{
-		display: none;
-		padding: 10% 0;
-		margin: auto;
-		text-align: center;
-	}
-	
-	.cardText
-	{
-		display: inline-block;
-		margin: auto;
-		padding: 10px;
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    	text-align: center;
-    	font-size: 20px;
-    	font-weight: bold;
-	}
-		
-	.table_div
-	{
-		padding-left: 10px;
-		padding-right: 10px;
-		padding-top: 10px;
-		width: 98%;
-	}
-	
-	.actividades
-	{
-	}
-	.actividadesCelda
-	{
-		cursor: pointer;
-		color: white;
-		font-weight: bold;
-	    background-color: #ab263c;
-	}
-	.filasTabla
-	{
-	    background-color: #ffffff;
-	}
-	
-	.filasImpares
-	{
-		background-color: #f0f0f0f0;
-	}
-	.filasTabla td:first-child
-	{
-		background-color: #ffffff;
-		color: #000000;
-    	font-weight: bold;
-	}
-	/*Primera columna de cada fila(la de los nombres de los alumnos)*/
-	.filasImpares td:first-child
-	{
-		background-color: #f0f0f0f0;
-		color: #000000;
-    	font-weight: bold;
-	}
-		
-	.chart-container
-	{
-		position: relative;
-		margin: auto;
-		height: 90vh;
-		width: 90vw;
-	}	
-		
-	.chart-container
-	{
-		position: relative;
-		margin: auto;
-		height: 90vh;
-		width: 90vw;
-		display: none;
-	}
-		
-	.controles{
-		position: relative;
-		width: 100%;
-		background-color: #f2f2f2;
-		display: inline-block;
-	}
-	
-	.opciones {
-		height: 30px;
-		position: relative;
-		display: inline-block;
-	}
-		
-	.opciones .btn {
-		height: 100%;
-		background-color: transparent;
-		border: none;
-		box-shadow: inset 0 -3px 0px 0px #25c5d8;
-		color: #000000;
-		font-size: 14px;
-		font-weight: bold;
-		cursor: pointer;
-		padding-left: 22px;
-		background-image: url(./../img/visibility_off.png);
-		background-repeat: no-repeat;
-		background-position: center left 2px;
-		margin-right: 2px;
-	}
-	
-	.opciones .btn:hover {
-		box-shadow: inset 0 -4px 0px 0px #25c5d8;
-	}
-		
-	.pestañas {
-		height: 30px;
-		position: relative;
-		display: inline-block;
-		padding-right: 2px;
-	}
-	
-	.pestañas .btn {
-		height: 100%;
-		background-color: #f2f2f2;
-		border: none;
-		color: #000000;
-		font-size: 14px;
-		font-weight: bold;
-		cursor: pointer;
-	}
-	.pestañas .btn:hover {
-		background-color:  #f2f2f2;
-		box-shadow: inset 0 -3px 0px 0px #25c5d8;
-	}
-	input[type="button"][disabled] {
-		background-color:  #f2f2f2;
-		box-shadow: inset 0 -3px 0px 0px #25c5d8;
-	}
-</style>
 
 <script type="text/javascript" src="./lib/Chart.js"></script>
 <script type="text/javascript" src="./lib/color-hash.js"></script>
