Creado el listado y opciones de los logs en el GUI #31

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="./lib/color-hash.js"></script>
 <script type="text/javascript" src="./lib/googleCharts.js"></script>
 <script type="text/javascript" src="./lib/html2canvas.js"></script>
+<script type="text/javascript" src="./messages.js"></script>
 
 </head>
 
@@ -226,6 +227,12 @@ var GroupMeanActive = false;
 var legendActive = true;
 var currentType = 'line';
 var language = 'es';
+
+//Dataset logs
+var mixedDataSet='';
+
+
+
 //
 var colorHash = new ColorHash();
 var ctx = document.getElementById('myChart');
@@ -569,69 +576,7 @@ Chart.pluginService.register({
 		}
 	}
 });
-//------------------------------------------Traducción-----------------------------------------------------------------
-// Contiene el texto a mostrar para los distintos elementos e idiomas
-var messages = {
-	btnLineas: {
-		es: "Lineas",
-		en: "Lines"
-	},
-	btnRadar: {
-		es: "Radar",
-		en: "Radar"
-	},
-	btnBoxPlot: {
-		es: "BoxPlot General",
-		en: "General BoxPlot"
-	},
-	btnBoxPlotGroup: {
-		es: "BoxPlot Del Grupo",
-		en: "Group BoxPlot"
-	},
-	btnCalificaciones: {
-		es: "Calificaciones",
-		en: "Grades"
-	},
-	btnLegend: {
-		es: "Leyenda",
-		en: "Legend"
-	},
-	btnMean: {
-		es: "Media General",
-		en: "General Mean"
-	},
-	btnGroupMean: {
-		es: "Media Del Grupo",
-		en: "Group Mean"
-	},
-	noradarText: {
-		es: "Selecciona al menos 3 actividades para mostrar el gráfico",
-		en: "Select at least 3 activities to show the chart"
-	},
-	noGroupText: {
-		es: "Selecciona un grupo para mostrar el gráfico",
-		en: "Select a group to show the chart"
-	}
-}
-// Establece el idioma
-function setLanguage(lang) {
-	language = lang;
-	get_i18n('btnLineas', lang);
-	get_i18n('btnRadar', lang);
-	get_i18n('btnBoxPlot', lang);
-	get_i18n('btnBoxPlotGroup', lang);
-	get_i18n('btnCalificaciones', lang);
-	get_i18n('btnLegend', lang);
-	get_i18n('btnMean', lang);
-	get_i18n('btnGroupMean', lang);
-	document.getElementById('noradarText').innerHTML = messages['noradarText'][lang];
-	document.getElementById('noGroupText').innerHTML = messages['noGroupText'][lang];
-	
-}
-// Modifica el valor de los inputs segun el idioma pasado
-function get_i18n(item, lang) {
-	document.getElementById(item).value = messages[item][lang];
-}
+
 </script>
 
 </body>
