Arreglado agrupar por dia y añadido agrupar por años y agrupar por trimestres #33 #34

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -220,6 +220,7 @@ var optionsStackedBar= {
 			text: ""
 		},
 		tooltips: {
+			position:'nearest',
 			mode: "x",
 			callbacks: {
 				label: function(tooltipItem, data) {
