Cambiado los zonedatetime por localdate

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -529,9 +529,9 @@ function updateChart(type, dataSet){
 				}
 				break;
 			case 'stackedBar':
-				StackedBarDataSet=dataset;
+				StackedBarDataSet=dataSet;
 				if(currentType == 'stackedBar'){
-					myChart.data=StackedDataSet;
+					myChart.data=StackedBarDataSet;
 				}
 
 		}
