Cambiado el puntero al mas cercano

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -228,6 +228,7 @@ var optionsStackedBar= {
 		}
 	}, //elements
 	tooltips: {
+		position: 'nearest',
 		mode: 'x',
 		callbacks: {
 			label: function(tooltipItem, data) {
