Creado la graficas para componente y eveno.

--- a/resources/graphics/ExportCharts.html
+++ b/resources/graphics/ExportCharts.html
@@ -366,7 +366,7 @@ window.onload = function() {
 //Contiene el texto a mostrar para los distintos elementos e idiomas
 var messages = {
 	lines: {
-		es: "Gráfico de lineas",
+		es: "Gr&aacute;fico de lineas",
 		en: "Lines chart"
 	},
 	radar: {
