Arreglado los nombres de los componentes y las lineas de las medias se apilan #44 #45

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -241,6 +241,7 @@ var optionsStackedBar= {
 	},
 	scales:{
         yAxes: [{
+        	stacked:true,
             gridLines: {
                 display:false
             },
