Arreglado el bug que se exporta el mismo grafico despues de modificarse, movido de paquete la creacion de dataset de barras

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -683,6 +683,7 @@ function exportCurrentElemet() {
 	if(currentType == 'table') {
 		return document.querySelector('#table_img canvas').toDataURL();
 	} else {
+		myChart.update(); // por algun motivo si no se actualiza no cambia la grafica elegida
 		return myChart.toBase64Image();
 	}
 }
